tests/src/frontend/syntax/invalid/char_escape_unknown.sk
fun main(): String {
  '\k'.toString()
}
